# 5-tiao-qu

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  todo.md  tsconfig.base.json
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: __init__.py  health.py  questions.py  rulebooks.py
apps/api/app/core/: config.py
apps/api/app/domain/: __init__.py  schemas.py
apps/api/app/services/: __init__.py  ports.py
apps/api/migrations/: 0001_initial_schema.sql
apps/web/: README.md  next-env.d.ts  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
storage/: README.md
